--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="app"></div>
-    <script src="./bundle.js"></script>
+    <script src="./bundle.js?v=1.2"></script>
 </body>
 
 </html>
